@@ -1,3 +1,13 @@
+Tue Feb 25 15:19:17 2003  David Helder  <dhelder@umich.edu>
+
+	* src/makefile.mingw: Commited Martyn Russell's patch to use
+	   pkg-config.
+	
+	* src/conn.c (async_cb): Guard conn->func's with
+	g_return_val_if_fail().
+
+	* src/conn.c (gnet_conn_new_socket): Don't watch error.
+
 Fri Feb 21 17:52:18 2003  David Helder  <dhelder@umich.edu>
 
 	* *: Release 1.3.2
